fix: adjust alignment of social icons in Footer and update Home page heading padding

--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -28,7 +28,7 @@
         &.social {
             display: flex;
             justify-content: flex-end;
-            align-items: flex-end;
+            align-items: flex-start;
 
             >a {
                 margin-left: 10px;
